# vcclient-for-zeroshot-server

./: .gitattributes  .gitignore  README.md  pyproject.toml
.github/workflows/: release-drafter.yml
installer/: .gitignore  run.bat  setup.bat
vcclient_for_zeroshot_server/: const.py  logger.py  main.py
vcclient_for_zeroshot_server/core/configuration_manager/: configuration_manager.py
vcclient_for_zeroshot_server/core/data_types/: data_types.py  slot_manager_data_types.py  vc_manager_data_types.py
vcclient_for_zeroshot_server/core/gpu_device_manager/: gpu_device_manager.py
vcclient_for_zeroshot_server/core/module_manager/: module_manager.py
vcclient_for_zeroshot_server/core/slot_manager/: slot_manager.py
vcclient_for_zeroshot_server/core/slot_manager/model_importer/: model_importer.py
vcclient_for_zeroshot_server/core/vc_manager/: vc_manager.py
vcclient_for_zeroshot_server/core/vc_manager/pipeline/: pipeline.py  pipline_manager.py  seed_vc_pipeline.py
vcclient_for_zeroshot_server/core/vc_manager/utils/: audio_splitter.py
vcclient_for_zeroshot_server/core/voice_character_slot_manager/: voice_character_slot_manager.py
vcclient_for_zeroshot_server/core/voice_character_slot_manager/importer/: importer.py
vcclient_for_zeroshot_server/server/: event_emitter_manager.py  key_generator.py  server.py  server_rest_api.py  server_rest_api_configuration_manager.py  server_rest_api_gpu_device_manager.py  server_rest_api_module_manager.py  server_rest_api_slot_manager.py  server_rest_api_vc_manager.py  server_rest_api_voice_character_slot_manager.py  server_socketio.py  server_socketio_namespace.py  server_socketio_server.py  validation_error_logging_route.py
vcclient_for_zeroshot_server/server/fileuploader/: fileuploader.py
vcclient_for_zeroshot_server/utils/: color_print.py  download_callback.py
web_front/: index.html  licenses-js.json
web_front/assets/: browser-ponyfill-9vflgRxD.js  browser-ponyfill-CMBA6Oxq.js  index-DN29mDmi.css  index-YDTNrKvT.js  index-bAdzADy_.js
web_front/assets/gui_settings/: GUI.json
web_front/assets/i18n/ar/: translation.json
web_front/assets/i18n/de/: translation.json
web_front/assets/i18n/el/: translation.json
web_front/assets/i18n/en/: translation.json
web_front/assets/i18n/es/: translation.json
web_front/assets/i18n/fr/: translation.json
web_front/assets/i18n/it/: translation.json
web_front/assets/i18n/ja/: translation.json
web_front/assets/i18n/ko/: translation.json
web_front/assets/i18n/la/: translation.json
(+3 files in other folders)
